<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">NetCalculator</string>
    <string name="action_settings">Settings</string>
    <string name="close">Close</string>
    <string name="error">Error</string>
    <string name="errorHighCIDR">The CIDR value can t be greater than 31</string>
    <string name="errorIPpart">The value can t be greater than 255</string>
    <string name="reset">Reset</string>
    <string name="ip">IP:</string>
    <string name="cidr">CIDR:</string>
    <string name="point">.</string>
    <string name="slash">/</string>
    <string name="hosts">Hosts:</string>
    <string name="address">Address:</string>
    <string name="broadcast">Broadcast:</string>
    <string name="netAddres">Net Address:</string>
    <string name="mask">Mask:</string>
    <string name="wildcard">Wilcard:</string>
    <string name="base">Base</string>
    <string name="selectBase">Select the base of solution</string>
    <string name="decimal">Decimal</string>
    <string name="binary">Binary</string>
    <string name="octal">Octal</string>
    <string name="hexadecimal">Hexadecimal</string>
    <string name="about">IP NetCalculator version 1.3. Developed by VITICLIC.</string>
    <string name="About">About</string>
    <string name="settings">Settings</string>
    <string name="exit">Exit</string>
    <string name="copy">Copy to clipboard:</string>

</resources>