<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin" >

            <TextView
                android:id="@+id/lblInsertIP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ip" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent" >

                <EditText
                    android:id="@+id/ipA"
                    style="@style/TextViewIP"
                    android:ems="10"
                    android:nextFocusDown="@+id/ipB" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/point" />

                <EditText
                    android:id="@+id/ipB"
                    style="@style/TextViewIP"
                    android:ems="10"
                    android:nextFocusDown="@+id/ipC" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/point" />

                <EditText
                    android:id="@+id/ipC"
                    style="@style/TextViewIP"
                    android:ems="10"
                    android:nextFocusDown="@+id/ipD" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/point" />

                <EditText
                    android:id="@+id/ipD"
                    style="@style/TextViewIP"
                    android:ems="10" />
            </LinearLayout>

            <TextView
                android:id="@+id/lblCIDR"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cidr" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <EditText
                    android:id="@+id/ipMask"
                    style="@style/TextViewIP.Mask"
                    android:maxLength="2" />

                <Button
                    android:id="@+id/btCalculateNetwork"
                    style="@style/Button"
                    android:text="@string/calculate" />

                <Button
                    android:id="@+id/btnReset"
                    style="@style/Button"
                    android:text="@string/reset" />
            </LinearLayout>


            <LinearLayout
                android:id="@+id/outputLayout"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/lblAddress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="17dp"
                    android:text="@string/address" />

                <TextView
                    android:id="@+id/outAddress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/lblMask"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mask" />

                <TextView
                    android:id="@+id/outMask"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/lblWildCard"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/wildcard" />

                <TextView
                    android:id="@+id/outWildCard"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/lblNetAddress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/netAddres" />

                <TextView
                    android:id="@+id/outNetAddress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/lblBroadcast"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/broadcast" />

                <TextView
                    android:id="@+id/outBroadcast"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/lblHosts"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hosts" />

                <TextView
                    android:id="@+id/outHosts"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/lytMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true" >
    </LinearLayout>

</RelativeLayout>